tests/parser/invalid/precedence-mix-and-or.inox
== SPDX-License-Identifier: MPL-2.0
== Copyright © 2026 Marcelo Fortes and Inox contributors. All rights reserved.
==
== This Source Code Form is subject to the terms of the Mozilla Public
== License, v. 2.0. If a copy of the MPL was not distributed with this
== file, You can obtain one at https://mozilla.org/MPL/2.0/.

== Mixing 'and' and 'or' without parentheses is a canonical error.

Module PrecedenceMixAndOr

Main :
    A := True
    B := False
    C := True
    R := A or B and C
    PutLn(R)
;
